# duc-pilot

./: Cargo.toml  README.md
autopilot/: Cargo.toml
autopilot/src/: attitude.rs  board.rs  control.rs  imu.rs  lib.rs  pid.rs  rc.rs  vehicle.rs
autopilot/src/hal/: gps.rs  imu.rs
board/sitl/: Cargo.toml
board/sitl/src/: app.rs  board.rs  data.txt  flight_axis.rs  flight_axis_helper.rs  lib.rs  main.rs  sitl.rs  util.rs
board/stm32/: Cargo.toml
board/stm32/src/: main.rs  matekf405te.rs  micoair743v2.rs
libraries/ahrs/: Cargo.toml  README.md
libraries/ahrs/src/: ekf.rs  error.rs  imm.rs  lib.rs  models.rs  sensors.rs  utils.rs
libraries/driver/: Cargo.toml  README.md
libraries/driver/src/: hal.rs  lib.rs  ublox.rs
libraries/driver/src/baro/: bmp280.rs  dps310.rs  mod.rs  spl06.rs
libraries/hal/: Cargo.toml
libraries/hal/src/: baro.rs  gps.rs  imu.rs  lib.rs  manager.rs  rc_input.rs  types.rs
libraries/pid/: Cargo.toml
libraries/pid/src/: autotune.rs  lib.rs  pid.rs
