[package]
name = "stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
autopilot = { path = "../../autopilot" }
driver = { path = "../../libraries/driver", default-features = false}
embassy-stm32 = { version = "0.2.0", features = [
    "time-driver-tim2",
    "defmt",
    "exti",
    "memory-x",
] }
embassy-time = { version = "0.4.0" }
embassy-executor = { version = "0.3.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }

[features]
micoair743v2 = ["embassy-stm32/stm32h743vi", "driver/stm32h743vi"]
matekf405te = ["embassy-stm32/stm32f405rg", "driver/stm32f405rg"]

default = ["micoair743v2"]
