[package]
name = "ahrs"
version = "0.1.0"
edition = "2021"

[features]

desktop = ["nalgebra/std"]

embassy = ["embassy-time"]
stm32 = ["embassy", "embassy-stm32"]

default = ["desktop"]


[dependencies]
nalgebra = { version = "0.32.3", default-features = false }
thiserror = "1.0.50"

# Dependencies for Embassy support
embassy-stm32 = { version = "0.2.0", optional = true, features = ["rt"] }
embassy-time = { version = "0.4.0", optional = true }
